# Sales-Analysis-Forecasting

./: .gitignore  Arima_CTS.ipynb  README.md  app.py  demo.py  example_data.csv  pyproject.toml  test_api.py
backend/: Insight Innovators_16_Sales Analysis and Forecasting (1).pptx  dataset.csv  package-lock.json  package.json  server.js
backend/config/: database.js  db.js  dbLoader.js
backend/controllers/: chatController.js  inventoryController.js  overviewController.js
backend/routes/: chatRoutes.js  inventoryRoutes.js  overviewRoutes.js
backend/services/: chatService.js  dataService.js  forecastService.js  inventoryService.js  nlp.js
backend/utils/: bootstrap.js  chartUtils.js  csvStore.js  seed.js
drug-sales/: M01AB_prophet_model.pkl  M01AE_prophet_model.pkl  N02BA_prophet_model.pkl  N02BE_prophet_model.pkl  N05B_prophet_model.pkl  N05C_prophet_model.pkl  R03_prophet_model.pkl  R06_prophet_model.pkl
drug-sales/backend/: app.py  pickprophet.py  prophetsample.py  requirements.txt
drug-sales/backend/models/: M01AB_prophet_model.pkl  M01AE_prophet_model.pkl  N02BA_prophet_model.pkl  N02BE_prophet_model.pkl  N05B_prophet_model.pkl  N05C_prophet_model.pkl  (+2 more)
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css  main.jsx
model/: Arima2_CTS.ipynb  Arima_CTS (1).ipynb  Arima_CTS (3).ipynb  LSTM_Stacked.ipynb  naivebase & seasonlity navie.ipynb  pickprophet.py  prophet (2).ipynb  prophet-final.ipynb  prophet_trained.ipynb  xg boost (2).ipynb  xg boost.ipynb
services/: prophet_forecaster.py
(+8 files in other folders)
