[project]
name = "sales-analysis-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "plotly>=5.17.0",
    "prophet>=1.1.7",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "streamlit>=1.28.0",
    "uvicorn>=0.35.0",
]
